--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       margin: 20px;
       display: flex;
       justify-content: center;
-      gap: 20px; /* Tạo khoảng cách giữa các nút */
+      gap: 20px;
     }
     button {
       padding: 10px 15px;
@@ -32,7 +32,7 @@
       transition: background-color 0.3s;
     }
     button:hover {
-      background-color: #007bb5; /* Màu nền thay đổi khi hover */
+      background-color: #007bb5;
     }
   </style>
 </head>
@@ -51,7 +51,6 @@
 </div>
 
 <script>
-  // Lấy phần tử canvas và đối tượng đồ họa
   const canvas = document.getElementById('gameCanvas');
   const ctx = canvas.getContext('2d');
 
@@ -59,24 +58,22 @@
   let ballRadius = 10;
   let x = canvas.width / 2;
   let y = canvas.height - 30;
-  let dx = 2; // tốc độ di chuyển bóng theo trục x
-  let dy = -2; // tốc độ di chuyển bóng theo trục y
+  let dx = 2; // Tốc độ di chuyển bóng theo trục x
+  let dy = -2; // Tốc độ di chuyển bóng theo trục y
   let paddleHeight = 10;
   let paddleWidth = 75;
-  let paddleX = (canvas.width - paddleWidth) / 2; // vị trí thanh ngang
+  let paddleX = (canvas.width - paddleWidth) / 2;
   let rightPressed = false;
   let leftPressed = false;
   let score = 0;
-  let isGameOver = false; // Trạng thái game over
-  let isGameRunning = true; // Trạng thái của trò chơi
+  let isGameOver = false;
+  let isGameRunning = true;
 
-  // Lấy các nút điều khiển
   const restartBtn = document.getElementById('restartBtn');
   const endGameBtn = document.getElementById('endGameBtn');
   const leftBtn = document.getElementById('leftBtn');
   const rightBtn = document.getElementById('rightBtn');
 
-  // Sự kiện nhấn phím
   document.addEventListener("keydown", keyDownHandler, false);
   document.addEventListener("keyup", keyUpHandler, false);
 
@@ -96,7 +93,6 @@
     }
   }
 
-  // Vẽ quả bóng
   function drawBall() {
     ctx.beginPath();
     ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
@@ -105,7 +101,6 @@
     ctx.closePath();
   }
 
-  // Vẽ thanh ngang
   function drawPaddle() {
     ctx.beginPath();
     ctx.rect(paddleX, canvas.height - paddleHeight, paddleWidth, paddleHeight);
@@ -114,12 +109,23 @@
     ctx.closePath();
   }
 
-  // Cập nhật điểm
   function updateScore() {
     document.getElementById('score').textContent = score;
   }
 
-  // Kiểm tra va chạm và cập nhật trò chơi
+  // Hàm thay đổi quỹ đạo và tăng tốc độ bóng
+  function changeBallDirection() {
+    let randomAngle = Math.random() * Math.PI / 4 - Math.PI / 8; // Tạo góc ngẫu nhiên
+    let speed = Math.sqrt(dx * dx + dy * dy); // Giữ nguyên tốc độ
+
+    dx = speed * Math.cos(randomAngle);
+    dy = -Math.abs(speed * Math.sin(randomAngle)); // Đảm bảo bóng di chuyển lên trên
+
+    // Tăng tốc độ bóng
+    dx *= 1.05;
+    dy *= 1.05;
+  }
+
   function draw() {
     if (isGameOver) {
       ctx.font = "30px Arial";
@@ -135,7 +141,7 @@
       return;
     }
 
-    ctx.clearRect(0, 0, canvas.width, canvas.height); // Xóa khung hình trước khi vẽ lại
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
     drawBall();
     drawPaddle();
     updateScore();
@@ -150,7 +156,8 @@
       // Kiểm tra va chạm với thanh ngang
       if (x > paddleX && x < paddleX + paddleWidth) {
         dy = -dy;
-        score++; // Tăng điểm khi bóng va chạm với thanh
+        score++; // Tăng điểm
+        changeBallDirection(); // Thay đổi quỹ đạo và tăng tốc độ
       } else {
         isGameOver = true; // Kết thúc trò chơi
       }
@@ -167,14 +174,9 @@
       paddleX -= 7;
     }
 
-    // Vẽ lại khung hình tiếp theo
     requestAnimationFrame(draw);
   }
 
-  // Bắt đầu trò chơi
-  draw();
-
-  // Hàm reset trò chơi
   function resetGame() {
     isGameOver = false;
     isGameRunning = true;
@@ -184,55 +186,51 @@
     dx = 2;
     dy = -2;
     paddleX = (canvas.width - paddleWidth) / 2;
-    draw(); // Bắt đầu lại
+    draw();
   }
 
-  // Sự kiện nút "Bắt đầu lại"
   restartBtn.addEventListener("click", resetGame);
 
-  // Sự kiện nút "Kết thúc trò chơi"
   endGameBtn.addEventListener("click", function() {
     isGameRunning = false;
   });
 
-  // Sự kiện nút "Qua trái"
   leftBtn.addEventListener("click", function() {
     if (paddleX > 0) {
-      paddleX -= 15; // Di chuyển thanh ngang qua trái
+      paddleX -= 15;
     }
   });
 
-  // Sự kiện nút "Qua phải"
   rightBtn.addEventListener("click", function() {
     if (paddleX < canvas.width - paddleWidth) {
-      paddleX += 15; // Di chuyển thanh ngang qua phải
+      paddleX += 15;
     }
   });
 
-  // Ngăn chặn zoom bằng cảm ứng
   document.addEventListener('touchstart', function(e) {
     if (e.touches.length > 1) {
-      e.preventDefault(); // Ngăn chặn các thao tác zoom bằng cảm ứng
+      e.preventDefault();
     }
   });
 
-  // Ngăn chặn zoom bằng gesture
   document.addEventListener('gesturestart', function(e) {
     e.preventDefault();
   });
 
-  // Ngừng sự kiện double tap (ấn đúp)
   let lastTap = 0;
-
   document.body.addEventListener('touchend', function(e) {
     let currentTime = new Date().getTime();
     let timeDiff = currentTime - lastTap;
     
     if (timeDiff < 300 && timeDiff > 0) {
-      e.preventDefault(); // Ngăn chặn hành động zoom khi ấn đúp
+      e.preventDefault();
     }
     lastTap = currentTime;
   });
+
+  // Bắt đầu trò chơi
+  draw();
+
 </script>
 
 </body>
