--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 
-<h1>Hứng Bóng - Simple Canvas Game</h1>
+<h1>Hứng Bóng</h1>
 <canvas id="gameCanvas" width="320" height="320"></canvas>
 <p>Điểm: <span id="score">0</span></p>
 <div class="controls">
