--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       margin: 20px;
       display: flex;
       justify-content: center;
-      gap: 20px; /* Tạo khoảng cách giữa các nút */
+      gap: 20px;
     }
     button {
       padding: 10px 15px;
@@ -32,11 +32,7 @@
       transition: background-color 0.3s;
     }
     button:hover {
-      background-color: #007bb5; /* Màu nền thay đổi khi hover */
-    }
-    button:active {
-      background-color: #007bb5; /* Màu nền thay đổi khi nhấn */
-      transform: scale(0.95); /* Hiệu ứng thu nhỏ */
+      background-color: #007bb5;
     }
   </style>
 </head>
@@ -48,14 +44,13 @@
 <div class="controls">
     <button id="leftBtn">Qua trái</button>
     <button id="rightBtn">Qua phải</button>
-</div>
+  </div>
 <div class="controls">
   <button id="restartBtn">Bắt đầu lại</button>
   <button id="endGameBtn">Kết thúc trò chơi</button>
 </div>
 
 <script>
-  // Lấy phần tử canvas và đối tượng đồ họa
   const canvas = document.getElementById('gameCanvas');
   const ctx = canvas.getContext('2d');
 
@@ -63,24 +58,22 @@
   let ballRadius = 10;
   let x = canvas.width / 2;
   let y = canvas.height - 30;
-  let dx = 2; // tốc độ di chuyển bóng theo trục x
-  let dy = -2; // tốc độ di chuyển bóng theo trục y
+  let dx = 2; // Tốc độ di chuyển bóng theo trục x
+  let dy = -2; // Tốc độ di chuyển bóng theo trục y
   let paddleHeight = 10;
   let paddleWidth = 75;
-  let paddleX = (canvas.width - paddleWidth) / 2; // vị trí thanh ngang
+  let paddleX = (canvas.width - paddleWidth) / 2;
   let rightPressed = false;
   let leftPressed = false;
   let score = 0;
-  let isGameOver = false; // Trạng thái game over
-  let isGameRunning = true; // Trạng thái của trò chơi
+  let isGameOver = false;
+  let isGameRunning = true;
 
-  // Lấy các nút điều khiển
   const restartBtn = document.getElementById('restartBtn');
   const endGameBtn = document.getElementById('endGameBtn');
   const leftBtn = document.getElementById('leftBtn');
   const rightBtn = document.getElementById('rightBtn');
 
-  // Sự kiện nhấn phím
   document.addEventListener("keydown", keyDownHandler, false);
   document.addEventListener("keyup", keyUpHandler, false);
 
@@ -100,7 +93,6 @@
     }
   }
 
-  // Vẽ quả bóng
   function drawBall() {
     ctx.beginPath();
     ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
@@ -109,7 +101,6 @@
     ctx.closePath();
   }
 
-  // Vẽ thanh ngang
   function drawPaddle() {
     ctx.beginPath();
     ctx.rect(paddleX, canvas.height - paddleHeight, paddleWidth, paddleHeight);
@@ -118,18 +109,23 @@
     ctx.closePath();
   }
 
-  // Cập nhật điểm
   function updateScore() {
     document.getElementById('score').textContent = score;
   }
 
-  // Thay đổi quỹ đạo bóng mỗi lần chạm
+  // Hàm thay đổi quỹ đạo và tăng tốc độ bóng
   function changeBallDirection() {
-    dx += (Math.random() - 0.5) * 2;  // Thay đổi tốc độ ngang
-    dy += (Math.random() - 0.5) * 2;  // Thay đổi tốc độ dọc
+    let randomAngle = Math.random() * Math.PI / 4 - Math.PI / 8; // Tạo góc ngẫu nhiên
+    let speed = Math.sqrt(dx * dx + dy * dy); // Giữ nguyên tốc độ
+
+    dx = speed * Math.cos(randomAngle);
+    dy = -Math.abs(speed * Math.sin(randomAngle)); // Đảm bảo bóng di chuyển lên trên
+
+    // Tăng tốc độ bóng
+    dx *= 1.05;
+    dy *= 1.05;
   }
 
-  // Kiểm tra va chạm và cập nhật trò chơi
   function draw() {
     if (isGameOver) {
       ctx.font = "30px Arial";
@@ -145,7 +141,7 @@
       return;
     }
 
-    ctx.clearRect(0, 0, canvas.width, canvas.height); // Xóa khung hình trước khi vẽ lại
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
     drawBall();
     drawPaddle();
     updateScore();
@@ -159,8 +155,9 @@
     } else if (y + dy > canvas.height - ballRadius) {
       // Kiểm tra va chạm với thanh ngang
       if (x > paddleX && x < paddleX + paddleWidth) {
+        dy = -dy;
+        score++; // Tăng điểm
         changeBallDirection(); // Thay đổi quỹ đạo và tăng tốc độ
-        score++; // Tăng điểm khi bóng va chạm với thanh
       } else {
         isGameOver = true; // Kết thúc trò chơi
       }
@@ -170,21 +167,16 @@
     x += dx;
     y += dy;
 
-    // Di chuyển thanh ngang
+    // Điều khiển thanh ngang
     if (rightPressed && paddleX < canvas.width - paddleWidth) {
-      paddleX += 15; // Tăng tốc độ di chuyển qua phải
+      paddleX += 7;
     } else if (leftPressed && paddleX > 0) {
-      paddleX -= 15; // Tăng tốc độ di chuyển qua trái
+      paddleX -= 7;
     }
 
-    // Vẽ lại khung hình tiếp theo
     requestAnimationFrame(draw);
   }
 
-  // Bắt đầu trò chơi
-  draw();
-
-  // Hàm reset trò chơi
   function resetGame() {
     isGameOver = false;
     isGameRunning = true;
@@ -194,59 +186,52 @@
     dx = 2;
     dy = -2;
     paddleX = (canvas.width - paddleWidth) / 2;
-    draw(); // Bắt đầu lại
+    draw();
   }
 
-  // Sự kiện nút "Bắt đầu lại"
   restartBtn.addEventListener("click", resetGame);
 
-  // Sự kiện nút "Kết thúc trò chơi"
   endGameBtn.addEventListener("click", function() {
     isGameRunning = false;
   });
 
-  // Sự kiện nút "Qua trái"
-  leftBtn.addEventListener("mousedown", function() {
-    leftPressed = true; // Bắt đầu di chuyển thanh ngang qua trái
-  });
-
-  leftBtn.addEventListener("mouseup", function() {
-    leftPressed = false; // Dừng di chuyển khi thả nút
-  });
-
-  leftBtn.addEventListener("mouseout", function() {
-    leftPressed = false; // Dừng di chuyển khi chuột ra ngoài nút
-  });
-
-  // Sự kiện nút "Qua phải"
-  rightBtn.addEventListener("mousedown", function() {
-    rightPressed = true; // Bắt đầu di chuyển thanh ngang qua phải
-  });
-
-  rightBtn.addEventListener("mouseup", function() {
-    rightPressed = false; // Dừng di chuyển khi thả nút
-  });
-
-  rightBtn.addEventListener("mouseout", function() {
-    rightPressed = false; // Dừng di chuyển khi chuột ra ngoài nút
-  });
-
-  // Ngăn chặn zoom bằng cảm ứng
-  document.addEventListener('touchstart', function(e) {
-    if (e.touches.length > 1) {
-      e.preventDefault(); // Ngăn chặn các thao tác zoom bằng cảm ứng
+  leftBtn.addEventListener("click", function() {
+    if (paddleX > 0) {
+      paddleX -= 15;
     }
   });
 
-  // Ngăn chặn zoom bằng gesture
+  rightBtn.addEventListener("click", function() {
+    if (paddleX < canvas.width - paddleWidth) {
+      paddleX += 15;
+    }
+  });
+
+  document.addEventListener('touchstart', function(e) {
+    if (e.touches.length > 1) {
+      e.preventDefault();
+    }
+  });
+
   document.addEventListener('gesturestart', function(e) {
     e.preventDefault();
   });
 
-  // Ngừng sự kiện scroll khi chơi game
-  window.addEventListener('wheel', function(e) {
-    e.preventDefault();
+  let lastTap = 0;
+  document.body.addEventListener('touchend', function(e) {
+    let currentTime = new Date().getTime();
+    let timeDiff = currentTime - lastTap;
+    
+    if (timeDiff < 300 && timeDiff > 0) {
+      e.preventDefault();
+    }
+    lastTap = currentTime;
   });
+
+  // Bắt đầu trò chơi
+  draw();
+
 </script>
+
 </body>
 </html>
