--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1, minimum-scale=1">
-  <title>Simple Canvas Game</title>
+  <title>Ping Pong Game</title>
   <style>
     canvas {
       border: 1px solid black;
